# Numcpp

./: CMakeLists.txt
src/: main.cpp  matrix.h  mul_array.cpp  mul_array.h
tests/: test_matrix.cpp  test_mul_array.cpp
